--- a/test/data/html/test-document2.html
+++ b/test/data/html/test-document2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Yomichan Manual Tests</title>
+    <title>Yomitan Manual Tests</title>
     <link rel="icon" type="image/gif"
         href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
     <link rel="stylesheet" href="test-stylesheet.css">
@@ -37,7 +37,7 @@
 
 <body>
 
-    <h1>Yomichan Manual Tests</h1>
+    <h1>Yomitan Manual Tests</h1>
     <y-description>Manual tests involving fullscreen elements, &lt;iframe&gt;s, and shadow DOMs.</y-description>
 
     <y-test>
