--- a/test/data/html/test-document3.html
+++ b/test/data/html/test-document3.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomichan Manual Performance Tests</title>
+        <title>Yomitan Manual Performance Tests</title>
         <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
         <link rel="stylesheet" href="test-stylesheet.css">
     </head>
 <body>
 
-    <h1>Yomichan Manual Performance Tests</h1>
-    <p class="description">Testing Yomichan performance with artificially demanding cases in a real browser</p>
+    <h1>Yomitan Manual Performance Tests</h1>
+    <p class="description">Testing Yomitan performance with artificially demanding cases in a real browser</p>
 
     <div class="test">
         <div class="description">&lt;iframe&gt; element.</div>
