--- a/test/data/html/test-document1.html
+++ b/test/data/html/test-document1.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomichan Tests</title>
+        <title>Yomitan Tests</title>
         <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhEAAQAKEBAAAAAP///////////yH5BAEKAAIALAAAAAAQABAAAAImFI6Zpt0B4YkS0TCpq07xbmEgcGVRUpLaI46ZG7ppalY0jDCwUAAAOw==">
         <link rel="stylesheet" href="test-stylesheet.css">
     </head>
 <body>
 
-    <h1>Yomichan Tests</h1>
+    <h1>Yomitan Tests</h1>
 
     <div
         class="test"
