--- a/test/data/html/test-document2-frame1.html
+++ b/test/data/html/test-document2-frame1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>Yomichan Tests</title>
+        <title>Yomitan Tests</title>
         <script src="test-document2-script.js"></script>
         <style>
 body {
