--- a/ext/settings.html
+++ b/ext/settings.html
@@ -127,20 +127,7 @@
                 <select 
                     id="language-select"
                     data-setting="general.language"
-                >
-                    <option value="sq">Albanian</option>
-                    <option value="el">Greek</option>
-                    <option value="en">English</option>
-                    <option value="es">Spanish</option>
-                    <option value="fr">French</option>
-                    <option value="de">German</option>
-                    <option value="id">Indonesian</option>
-                    <option value="it">Italian</option>
-                    <option value="ja">Japanese</option>
-                    <option value="pt">Portuguese</option>
-                    <option value="ru">Russian</option>
-                    <option value="sh">Serbo-Croatian</option>
-                </select>
+                ></select>
             </div>
         </div></div>
         <div class="settings-item advanced-only"><div class="settings-item-inner settings-item-inner-wrappable">
@@ -3881,6 +3868,7 @@
 <script src="/js/pages/settings/status-footer.js"></script>
 <script src="/js/pages/settings/storage-controller.js"></script>
 <script src="/js/pages/settings/translation-text-replacements-controller.js"></script>
+<script src="/js/pages/settings/languages-controller.js"></script>
 <script src="/js/pages/settings/text-transformations-controller.js"></script>
 <script src="/js/templates/template-patcher.js"></script>
 <script src="/js/templates/template-renderer-proxy.js"></script>
